--- a/platform/openldap/Chart.yaml
+++ b/platform/openldap/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 name: openldap
 home: https://www.openldap.org
-version: 1.2.5
-appVersion: 2.4.48
+version: 2.0.3
+appVersion: 2.4.47
 description: Community developed LDAP software
 icon: http://www.openldap.org/images/headers/LDAPworm.gif
 keywords:
@@ -11,6 +11,6 @@ keywords:
 sources:
   - https://github.com/kubernetes/charts
 maintainers:
-  - name: enis
-    email: enis@apache.org
+  - name: Jean-Philippe Gouin
+    email: jp-gouin@hotmail.fr
 engine: gotpl
