Add creation of 'jenkins' folder to chart.

--- a/platform/jenkins/Dockerfile
+++ b/platform/jenkins/Dockerfile
@@ -1,7 +1,8 @@
-FROM jenkins/jenkins:lts
+FROM jenkins/jenkins:2.249.3-lts
 RUN jenkins-plugin-cli --plugins \
   git \
   ldap \
+  job-dsl \
   kubernetes \
   role-strategy \
   cloudbees-folder \
