--- a/platform/jenkins/values.yaml
+++ b/platform/jenkins/values.yaml
@@ -6,7 +6,7 @@ controller:
   # Used for label app.kubernetes.io/component
   componentName: "jenkins-master"
   image: "tenbriz/jenkins"
-  tag: "lts-2.249.3"
+  tag: "2.249.3-lts"
   imagePullPolicy: "Always"
   imagePullSecretName:
   # Optionally configure lifetime for master-container
@@ -234,6 +234,10 @@ controller:
                       username: "tenbriz"
                       password: "${DOCKER_PASSWORD}"
                       description: "Username/Password Credentials for hub.docker.com"
+      jobs: |
+        jobs:
+          - script: >
+              folder('jenkins')
 
   # Optionally specify additional init-containers
   customInitContainers: []
