--- a/platform/jenkins/inbound-agent/Jenkinsfile
+++ b/platform/jenkins/inbound-agent/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         kubernetes {
-            inheritFrom 'docker'
+            inheritFrom 'docker-arm'
         }
     }
 
