--- a/platform/jenkins/values.yaml
+++ b/platform/jenkins/values.yaml
@@ -390,10 +390,31 @@ agent:
 # Here you can add additional agents
 # They inherit all values from `agent` so you only need to specify values which differ
 additionalAgents:
-  docker:
-    podName: docker
+  docker-arm:
+    podName: docker-arm
     nodeSelector:
       beta.kubernetes.io/arch: arm64
+      tools/docker: "1"
+    volumes:
+      - type: HostPath
+        hostPath: /var/run/docker.sock
+        mountPath: /var/run/docker.sock
+    yamlTemplate: |-
+      apiVersion: v1
+      kind: Pod
+      spec:
+        containers:
+          - name: docker
+            image: docker:latest
+            command:
+            tty: true
+            volumeMounts:
+            - mountPath: /var/run/docker.sock
+              name: volume-0
+  docker-amd:
+    podName: docker-amd
+    nodeSelector:
+      beta.kubernetes.io/arch: amd64
       tools/docker: "1"
     volumes:
       - type: HostPath
