Use variable for jenkins version in Dockerfile instead of fixed version.

--- a/platform/jenkins/Jenkinsfile
+++ b/platform/jenkins/Jenkinsfile
@@ -23,6 +23,14 @@ pipeline {
             }
         }
 
+        stage('Update Dockerfile') {
+            steps {
+                dir('./platform/jenkins') {
+                    sh "sed -i s/$version/${TAG_NAME}/ Dockerfile"
+                }
+            }
+        }
+
         stage('Build') {
             steps {
                 container('docker') {
