--- a/platform/metallb/metallb.yaml
+++ b/platform/metallb/metallb.yaml
@@ -369,7 +369,7 @@ spec:
       - args:
         - --port=7472
         - --config=config
-        image: metallb/controller:v0.9.5
+        image: tenbriz/metallb-controller:0.9.5-pr596
         imagePullPolicy: Always
         name: controller
         ports:
