--- a/applications/jenkins/Jenkinsfile
+++ b/applications/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         kubernetes {
-            inheritFrom 'docker-amd'
+            inheritFrom 'docker-arm'
         }
     }
 
