Add NodePort service to openldap application.

--- a/applications/openldap/values.yaml
+++ b/applications/openldap/values.yaml
@@ -56,6 +56,12 @@ openldap-stack-ha:
       memory: "256Mi"
       cpu: "1000m"
 
+  service:
+    type: "NodePort"
+    nodePort: true
+    ldapPortNodePort: "30389"
+    sslLdapPortNodePort: "30636"
+
   ltb-passwd:
     enabled: false
 
