Use own image for Jenkins instance.

--- a/applications/jenkins/values.yaml
+++ b/applications/jenkins/values.yaml
@@ -2,8 +2,8 @@ jenkins:
   controller:
 
     # Image.
-    image: "jenkins4eval/jenkins"
-    tag: "2.291-slim"
+    image: "tenbriz/jenkins"
+    tag: "latest"
     imagePullPolicy: "IfNotPresent"
 
     # Admin user.
