Don't overwrite Jenkins agent.

--- a/applications/jenkins/values.yaml
+++ b/applications/jenkins/values.yaml
@@ -113,9 +113,7 @@ jenkins:
     testEnabled: false
 
   agent:
-    image: "jenkins/inbound-agent"
-    tag: "latest"
-    podName: "jenkins-agent"
+    enabled: true
 
   additionalAgents:
     docker-arm:
