--- a/applications/jenkins/Jenkinsfile
+++ b/applications/jenkins/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         kubernetes {
-            inheritFrom 'docker-arm'
+            inheritFrom 'kaniko'
         }
     }
 
@@ -10,48 +10,11 @@ pipeline {
         buildDiscarder(logRotator(numToKeepStr: '5'))
     }
 
-    parameters {
-        string(name: 'TAG_NAME', defaultValue: '', description: 'The release version number.')
-    }
-
     stages {
-        stage('Prepare') {
+        stage('Build & Push') {
             steps {
-                script {
-                    currentBuild.displayName = "#${BUILD_NUMBER}:${TAG_NAME}"
-                }
-            }
-        }
-
-        stage('Update Dockerfile') {
-            steps {
-                dir('./applications/jenkins') {
-                    sh "sed -i 's/_version/${TAG_NAME}/' Dockerfile"
-                }
-            }
-        }
-
-        stage('Build') {
-            steps {
-                container('docker') {
-                    dir('./applications/jenkins') {
-                        sh "docker build -t tenbriz/jenkins:latest -t tenbriz/jenkins:${params.TAG_NAME} ."
-                    }
-                }
-            }
-        }
-
-        stage('Push') {
-            steps {
-                container('docker') {
-                    dir('./applications/jenkins') {
-                        withCredentials([usernamePassword(credentialsId: 'docker', passwordVariable: 'DOCKER_LOGIN_PASSWORD', usernameVariable: 'DOCKER_LOGIN_USERNAME')]) {
-                            sh "docker login -u ${DOCKER_LOGIN_USERNAME} -p ${DOCKER_LOGIN_PASSWORD}"
-                        }
-
-                        sh "docker push tenbriz/jenkins:${params.TAG_NAME}"
-                        sh "docker push tenbriz/jenkins:latest"
-                    }
+                container('kaniko') {
+                    sh '/kaniko/executor -f ./applications/jenkins/Dockerfile --cache=true --destination=tenbriz/jenkins'
                 }
             }
         }
