--- a/.github/workflows/produce-ignition.yml
+++ b/.github/workflows/produce-ignition.yml
@@ -25,3 +25,15 @@ jobs:
       - name: Generate k0s-master ignition file
         working-directory: ./infrastructure/cluster/coreos
         run: docker run --interactive --rm quay.io/coreos/butane:release --pretty --strict < k0s-master.bu > k0s-master.ign
+        
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          # Artifact name
+          name: CoreOS - Ignition files
+          # A file, directory or wildcard pattern that describes what to upload
+          path: ./infrastructure/cluster/coreos/k0s-master.ign
+          # The desired behavior if no files are found using the provided path.
+          if-no-files-found: warn
+          # Duration after which artifact will expire in days. 0 means using default retention.
+          retention-days: 0
