--- a/platform/argocd/values.yaml
+++ b/platform/argocd/values.yaml
@@ -1,9 +1,3 @@
-global:
-  image:
-    repository: alinbalutoiu/argocd
-    tag: v2.2.2
-    imagePullPolicy: IfNotPresent
-
 argo-cd:
   server:
     ingress:
@@ -25,6 +19,13 @@ argo-cd:
       - hosts:
         - argocd.caas.i.kiessla.de
         secretName: argocd-secret
+
+    config:
+      helm.valuesFileSchemes: >-
+        secrets+gpg-import, secrets+gpg-import-kubernetes,
+        secrets+age-import, secrets+age-import-kubernetes,
+        secrets,
+        https
 
   repoServer:
     env:
@@ -66,6 +67,7 @@ argo-cd:
   
             wget -qO /custom-tools/sops https://github.com/mozilla/sops/releases/download/v${SOPS_VERSION}/sops-v${SOPS_VERSION}.linux
             wget -qO /custom-tools/kubectl https://dl.k8s.io/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl
+            wget -qO /custom-tools/curl https://github.com/moparisthebest/static-curl/releases/latest/download/curl-amd64
   
             chmod +x /custom-tools/*
         volumeMounts:
