fix: disable unneeded ArgoCD ApplicationSet

--- a/platform/argocd/values.yaml
+++ b/platform/argocd/values.yaml
@@ -73,3 +73,6 @@ argo-cd:
         volumeMounts:
           - mountPath: /custom-tools
             name: custom-tools
+
+  applicationSet:
+    enabled: false
