--- a/.github/workflows/produce-ignition.yml
+++ b/.github/workflows/produce-ignition.yml
@@ -21,10 +21,21 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
       - name: Generate k0s-master ignition file
         working-directory: ./infrastructure/cluster/coreos
         run: docker run --interactive --rm quay.io/coreos/butane:release --pretty --strict < k0s-master.bu > k0s-master.ign
+
+      - name: Generate k0s-worker01 ignition file
+        working-directory: ./infrastructure/cluster/coreos
+        run: docker run --interactive --rm quay.io/coreos/butane:release --pretty --strict < k0s-worker01.bu > k0s-worker01.ign
+
+      - name: Generate k0s-worker02 ignition file
+        working-directory: ./infrastructure/cluster/coreos
+        run: docker run --interactive --rm quay.io/coreos/butane:release --pretty --strict < k0s-worker02.bu > k0s-worker02.ign
+
+      - name: Generate k0s-worker03 ignition file
+        working-directory: ./infrastructure/cluster/coreos
+        run: docker run --interactive --rm quay.io/coreos/butane:release --pretty --strict < k0s-worker03.bu > k0s-worker03.ign
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.0.0
@@ -32,7 +43,7 @@ jobs:
           # Artifact name
           name: CoreOS - Ignition files
           # A file, directory or wildcard pattern that describes what to upload
-          path: ./infrastructure/cluster/coreos/k0s-master.ign
+          path: ./infrastructure/cluster/coreos/k0s-*.ign
           # The desired behavior if no files are found using the provided path.
           if-no-files-found: warn
           # Duration after which artifact will expire in days. 0 means using default retention.
