--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 /.idea/
-/applications/openldap/charts
+/**/charts
 /applications/openldap/templates/secret.yaml
-/applications/jenkins/charts
-/platform/argocd/charts
-/platform/nginx/charts
-/platform/longhorn/charts
-/platform/cert-manager/charts
