feat: use testing values. Revert before merge!

--- a/platform/metallb/values.yaml
+++ b/platform/metallb/values.yaml
@@ -21,6 +21,7 @@ metallb:
       protocol: bgp
       addresses:
       - 10.0.40.8/32
+  #TODO: Change back before merge!
 
   controller:
     enabled: true
