--- a/bootstrap/applications/values.yaml
+++ b/bootstrap/applications/values.yaml
@@ -7,4 +7,4 @@ destination:
 
 source:
   repository: https://github.com/realkiessla/homelab
-  defaultBranch: master
+  defaultBranch: feature/argocd
