fix: try fix for metallb config

--- a/platform/metallb/values.yaml
+++ b/platform/metallb/values.yaml
@@ -1,6 +1,6 @@
 metallb:
 
-  configInline: |
+  configInline:
     peers:
     - peer-address: 10.0.50.1
       peer-asn: 64500
@@ -21,7 +21,7 @@ metallb:
       protocol: bgp
       addresses:
       - 10.0.40.8/32
-  #TODO: Change back before merge!
+  #TODO: Change addresses back before merge!
 
   controller:
     enabled: true
