--- a/platform/longhorn/values.yaml
+++ b/platform/longhorn/values.yaml
@@ -1,6 +1,7 @@
 longhorn:
   ingress:
-    enabled: "true"
+    enabled: true
+    ingressClassName: nginx
     host: "longhorn.caas.i.kiessla.de"
     tls: "true"
     tlsSecret: "longhorn.acme-tls"
